# Theory-of-parallelism

lab2/: README.md
lab2/2.1/: Makefile  README.md  main.cpp
lab2/2.2/: main.c
lab2/2.3/: Makefile  main.c
lab3/task1/: task.cpp
lab3/task2/: task.cpp
lab4/: README.md  lab4.py
lab5/: lab5.py
task1/: CMakeLists.txt  Makefile  Makefile.txt  README.md  main.cpp
task6/: Makefile  README.md  device_vector.h  task.cpp
